[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.8", features = ["fs"] }
tower = "0.5.3"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"